[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-agent-base"
version = "1.0.0"
description = "Cocapn Fleet module — domain-agent-base"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
domain_agent_base = "agent:main"
